Split product and sku batch update APIs
